third_party/move/move-compiler-v2/tests/checking/abilities/bug_14490_field_abilities.exp

Diagnostics:
error: type `S<T>` is missing required ability `drop`
  ┌─ tests/checking/abilities/bug_14490_field_abilities.move:7:16
  │
7 │         entry: S<T>,
  │                ^^^^
  │
  = required by declaration of field `entry`
