third_party/move/move-compiler-v2/tests/checking/abilities/bug_14490_field_abilities.move
module 0x815::demo {
    struct S<T: store> has store {
        field: T,
    }

    struct E<T: store> has store, drop {
        entry: S<T>,
    }
}
